--- a/style.css
+++ b/style.css
@@ -26,9 +26,12 @@
     -moz-box-shadow: 8px 8px 24px 0px rgba(117, 117, 117, 1);
     box-shadow: 8px 8px 24px 0px rgba(117, 117, 117, 1);
     width: 90vw;
-    background-color: rgba(240, 248, 255, 0.651);
+    background-color:#473583;
     border-radius: 20px 20px 20px 20px;
     font-family: 'Fira Sans', sans-serif;
+    color: #F5F5F5;
+    background-image: linear-gradient(90deg, rgba(71, 53, 131, 1) 0%, rgba(41, 25, 72, 1) 100%);
+
 }
 
 .nameDiv{
@@ -60,9 +63,9 @@
 }
 
 .characterDiv:hover{
-    -webkit-box-shadow: 8px 8px 24px 0px rgba(144, 144, 144, 1);
-    -moz-box-shadow: 8px 8px 24px 0px rgba(144, 144, 144, 1);
-    box-shadow: 8px 8px 24px 0px rgba(144, 144, 144, 1);
+    -webkit-box-shadow: 8px 8px 24px 0px rgba(41, 25, 72, 1);
+    -moz-box-shadow: 8px 8px 24px 0px rgba(41, 25, 72, 1);
+    box-shadow: 8px 8px 24px 0px rgba(41, 25, 72, 1);
 }
 
 
@@ -71,7 +74,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #F3E5F5
+    background-color: #F3E5F5;
 }
 
 *{
@@ -112,6 +115,17 @@ a:link {
     margin-left: 50px;
 }
 
+.menu-container{
+    display: flex;
+    justify-content: flex-end;
+    width: 80vw;
+    margin-right: 20px;
+    gap: 5px;
+}
+
+.fa-brands{
+    margin-right: 5px;
+}
 
 .bannerText{
     display: flex;
@@ -121,6 +135,7 @@ a:link {
     margin-bottom: 50px;
     flex-direction: column;
     gap: 20px;
+    margin-top: 50px;
 
 }
 
