--- a/style.css
+++ b/style.css
@@ -212,3 +212,19 @@ input{
 .result-container{
     margin-top: 30px;
 }
+
+a:link{
+    color: #473583;
+}
+
+a:visited{
+    color: #473583;
+}
+
+a:hover{
+    color: #7B1FA2
+}
+
+a:active{
+    color: #CE93D8;
+}
